--- a/models/models.config
+++ b/models/models.config
@@ -4,4 +4,9 @@ model_config_list {
     base_path: '/models/test1_trt'
     model_platform: 'tensorflow'
   }
+  config {
+    name: 'yolov3'
+    base_path: '/models/yolov3_trt'
+    model_platform: 'tensorflow'
+  }
 }
