--- a/tf_serving/Dockerfile
+++ b/tf_serving/Dockerfile
@@ -1,6 +1,174 @@
-FROM tensorflow/serving:latest-gpu
+# Copyright 2018 Google LLC
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     https://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+FROM nvidia/cuda:11.1-cudnn8-devel-ubuntu18.04 as base_build
 
+ARG TF_SERVING_VERSION_GIT_BRANCH=r2.4
+ARG TF_SERVING_VERSION_GIT_COMMIT=HEAD
+
+LABEL maintainer=licht-t@outlook.jp
+LABEL tensorflow_serving_github_branchtag=${TF_SERVING_VERSION_GIT_BRANCH}
+LABEL tensorflow_serving_github_commit=${TF_SERVING_VERSION_GIT_COMMIT}
+
+ENV CUDNN_VERSION=8.0.4.30
+ENV TF_TENSORRT_VERSION=7.2.2
+ENV CUDA=11.1
 ENV TF_FORCE_GPU_ALLOW_GROWTH true
+
+RUN apt-get update && apt-get install -y  --allow-downgrades --allow-change-held-packages --no-install-recommends \
+        automake \
+        build-essential \
+        ca-certificates \
+        cuda-command-line-tools-11-1 \
+        libcublas-11-1 \
+        libcublas-dev-11-1 \
+        cuda-nvrtc-11-1 \
+        cuda-nvrtc-dev-11-1 \
+        cuda-cudart-dev-11-1 \
+        libcufft-dev-11-1 \
+        libcurand-dev-11-1 \
+        libcusolver-dev-11-1 \
+        libcusparse-dev-11-1 \
+        curl \
+        git \
+        libfreetype6-dev \
+        libtool \
+        libcudnn8=${CUDNN_VERSION}-1+cuda${CUDA} \
+        libcudnn8-dev=${CUDNN_VERSION}-1+cuda${CUDA} \
+        libcurl3-dev \
+        libzmq3-dev \
+        mlocate \
+        openjdk-8-jdk\
+        openjdk-8-jre-headless \
+        pkg-config \
+        python-dev \
+        software-properties-common \
+        swig \
+        unzip \
+        wget \
+        zip \
+        zlib1g-dev \
+        python3-distutils \
+        python-distutils-extra \
+        && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    find /usr/local/cuda-11.1/lib64/ -type f -name 'lib*_static.a' -not -name 'libcudart_static.a' -delete && \
+    rm /usr/lib/x86_64-linux-gnu/libcudnn_static_v8.a
+
+RUN apt-get update && \
+        apt-get install -y --no-install-recommends libnvinfer7=${TF_TENSORRT_VERSION}-1+cuda${CUDA} \
+        libnvinfer-dev=${TF_TENSORRT_VERSION}-1+cuda${CUDA} \
+        libnvinfer-plugin-dev=${TF_TENSORRT_VERSION}-1+cuda${CUDA} \
+        libnvinfer-plugin7=${TF_TENSORRT_VERSION}-1+cuda${CUDA} \
+        # TODO: need to verify
+        libnvonnxparsers7=${TF_TENSORRT_VERSION}-1+cuda${CUDA} \
+        libnvparsers7=${TF_TENSORRT_VERSION}-1+cuda${CUDA}\
+        libnvonnxparsers-dev=${TF_TENSORRT_VERSION}-1+cuda${CUDA} \
+        libnvparsers-dev=${TF_TENSORRT_VERSION}-1+cuda${CUDA} \
+        && apt-get clean \
+        && rm -rf /var/lib/apt/lists/*;
+
+# Install python 3.6.
+RUN add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && apt-get install -y \
+    python3.6 python3.6-dev python3-pip python3.6-venv && \
+    rm -rf /var/lib/apt/lists/* && \
+    python3.6 -m pip install pip --upgrade && \
+    update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.6 0
+
+# Make python3.6 the default python version
+RUN update-alternatives --install /usr/bin/python python /usr/bin/python3.6 0
+
+RUN curl -fSsL -O https://bootstrap.pypa.io/get-pip.py && \
+    python3 get-pip.py && \
+    rm get-pip.py
+
+RUN pip3 --no-cache-dir install \
+    future>=0.17.1 \
+    grpcio \
+    h5py \
+    keras_applications>=1.0.8 \
+    keras_preprocessing>=1.1.0 \
+    mock \
+    numpy \
+    portpicker \
+    requests \
+     --ignore-installed six>=1.12.0
+
+# Set up Bazel
+ENV BAZEL_VERSION 3.0.0
+WORKDIR /
+RUN mkdir /bazel && \
+    cd /bazel && \
+    curl -H "User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.133 Safari/537.36" -fSsL -O https://github.com/bazelbuild/bazel/releases/download/$BAZEL_VERSION/bazel-$BAZEL_VERSION-installer-linux-x86_64.sh && \
+    curl -H "User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/57.0.2987.133 Safari/537.36" -fSsL -o /bazel/LICENSE.txt https://raw.githubusercontent.com/bazelbuild/bazel/master/LICENSE && \
+    chmod +x bazel-*.sh && \
+    ./bazel-$BAZEL_VERSION-installer-linux-x86_64.sh && \
+    cd / && \
+    rm -f /bazel/bazel-$BAZEL_VERSION-installer-linux-x86_64.sh
+
+# Build TensorFlow with the CUDA configuration
+ENV CI_BUILD_PYTHON python
+ENV LD_LIBRARY_PATH /usr/local/cuda/extras/CUPTI/lib64:/usr/local/cuda/lib64:/usr/local/cuda/lib64/stubs:/usr/include/x86_64-linux-gnu:/usr/lib/x86_64-linux-gnu:$LD_LIBRARY_PATH
+
+ENV TF_NEED_CUDA 1
+ENV TF_NEED_TENSORRT 1
+ENV TENSORRT_INSTALL_PATH=/usr/lib/x86_64-linux-gnu
+ENV TF_CUDA_VERSION=11.1
+ENV TF_CUDNN_VERSION=8
+
+# Fix paths so that CUDNN can be found: https://github.com/tensorflow/tensorflow/issues/8264
+WORKDIR /
+RUN mkdir /usr/lib/x86_64-linux-gnu/include/ && \
+  ln -s /usr/include/cudnn.h /usr/local/cuda/include/cudnn.h && \
+  ln -s /usr/lib/x86_64-linux-gnu/libcudnn.so /usr/local/cuda/lib64/libcudnn.so && \
+  ln -s /usr/lib/x86_64-linux-gnu/libcudnn.so.${TF_CUDNN_VERSION} /usr/local/cuda/lib64/libcudnn.so.${TF_CUDNN_VERSION}
+
+# For backward compatibility we need this line. After 1.13 we can safely remove
+# it.
+ENV TF_NCCL_VERSION=
+
+# Set TMP for nvidia build environment
+ENV TMP="/tmp"
+
+# Download TF Serving sources (optionally at specific commit).
+WORKDIR /tensorflow-serving
+RUN curl -sSL --retry 5 https://github.com/tensorflow/serving/tarball/${TF_SERVING_VERSION_GIT_COMMIT} | tar --strip-components=1 -xzf -
+
+FROM base_build as binary_build
+# Build, and install TensorFlow Serving
+ARG TF_SERVING_BUILD_OPTIONS="--config=release"
+RUN echo "Building with build options: ${TF_SERVING_BUILD_OPTIONS}"
+ARG TF_SERVING_BAZEL_OPTIONS=""
+RUN echo "Building with Bazel options: ${TF_SERVING_BAZEL_OPTIONS}"
+
+RUN ln -s /usr/local/cuda/lib64/stubs/libcuda.so /usr/local/cuda/lib64/stubs/libcuda.so.1 && \
+    LD_LIBRARY_PATH=/usr/local/cuda/lib64/stubs:${LD_LIBRARY_PATH} \
+    bazel build --color=yes --curses=yes --config=cuda --copt="-fPIC"\
+    ${TF_SERVING_BAZEL_OPTIONS} \
+    --verbose_failures \
+    --output_filter=DONT_MATCH_ANYTHING \
+    ${TF_SERVING_BUILD_OPTIONS} \
+    tensorflow_serving/model_servers:tensorflow_model_server && \
+    cp bazel-bin/tensorflow_serving/model_servers/tensorflow_model_server \
+    /usr/local/bin/ && \
+    rm /usr/local/cuda/lib64/stubs/libcuda.so.1
+
+FROM binary_build as clean_build
+# Clean up Bazel cache when done.
+RUN bazel clean --expunge --color=yes && \
+    rm -rf /root/.cache
 
 RUN echo '#!/bin/bash \n\n\
 tensorflow_model_server --port=8500 --rest_api_port=8501 \
@@ -8,4 +176,3 @@ tensorflow_model_server --port=8500 --rest_api_port=8501 \
 && chmod +x /usr/bin/tf_serving_entrypoint.sh
 
 ENTRYPOINT ["/usr/bin/tf_serving_entrypoint.sh"]
-
